RESOLVED FIXED314911
Model attempts to download invalid USD files
https://bugs.webkit.org/show_bug.cgi?id=314911
Summary Model attempts to download invalid USD files
Mike Wyrzykowski
Reported 2026-05-15 13:21:50 PDT
Attachments
Mike Wyrzykowski
Comment 1 2026-05-15 13:29:28 PDT
EWS
Comment 2 2026-05-19 21:24:05 PDT
Committed 313542@main (c478340a431f): <https://commits.webkit.org/313542@main> Reviewed commits have been landed. Closing PR #65006 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.