Model attempts to download invalid USD files rdar://177178825 https://bugs.webkit.org/show_bug.cgi?id=314911

Reviewed by Etienne Segonzac.

If we get a 404 or similar invalid response code, we shouldn't attempt
to proceeed to parse the USD.

Also report failure in parsing files which exist and call the delegate's
didFailLoading function.

Test: model-element/model-element-404-error.html

* LayoutTests/model-element/model-element-404-error-expected.txt: Added.
* LayoutTests/model-element/model-element-404-error.html: Added.
* Source/WebCore/Modules/model-element/HTMLModelElement.cpp:
(WebCore::HTMLModelElement::modelResourceFinished):
* Source/WebKit/GPUProcess/graphics/Model/ModelTypes.h:
* Source/WebKit/GPUProcess/graphics/Model/USDModel.swift:
(USDModelLoader.loadModel(_:)):
(USDModelLoader.loadModel(from:)):
(WKBridgeModelLoader.loadModel(_:)):
* Source/WebKit/WebProcess/Model/WebModelPlayer.mm:
(WebKit::WebModelPlayer::load):

Canonical link: https://commits.webkit.org/313542@main